Refactor codebase for Java 11 compatibility